Adding basic registeration

--- a/app/index.html
+++ b/app/index.html
@@ -28,9 +28,9 @@
     <nav></nav>
     <div class="container" ng-view=""></div>
 
-    <div class="footer">
-      <p><span class="glyphicon glyphicon-heart"></span>
-      from the Egyptian team</p>
+    <div class="footer" style="margin-top: 10px;">
+        <p class="pull-right" style="margin-right: 20px;"><span class="glyphicon glyphicon-heart"></span>
+        from the Egyptian team</p>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
