--- a/app/index.html
+++ b/app/index.html
@@ -69,6 +69,7 @@
         <script src="scripts/directives/nav.js"></script>
         <script src="scripts/directives/teamsgraph.js"></script>
         <script src="scripts/controllers/register.js"></script>
+        <script src="scripts/controllers/projects.js"></script>
         <!-- endbuild -->
 </body>
 </html>
