--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,8 @@
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap-theme.css">
+    <link rel="stylesheet" href="bower_components/angular-ui/build/angular-ui.css">
+    <link rel="stylesheet" href="bower_components/ng-table/ng-table.css">
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -47,6 +49,7 @@
     <!--[if lt IE 9]>
     <script src="bower_components/es5-shim/es5-shim.js"></script>
     <script src="bower_components/json3/lib/json3.min.js"></script>
+    <script src="bower_components/angular-ui/build/angular-ui-ieshiv.js"></script>
     <![endif]-->
 
     <!-- build:js scripts/vendor.js -->
@@ -59,6 +62,10 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/parse-js-sdk/lib/parse.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
+    <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
+    <script src="bower_components/ng-table/ng-table.js"></script>
+
     <!-- endbower -->
     <!-- endbuild -->
 
