--- a/app/index.html
+++ b/app/index.html
@@ -77,6 +77,7 @@
         <script src="scripts/directives/teamsgraph.js"></script>
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/projects.js"></script>
+        <script src="scripts/controllers/profile.js"></script>
         <!-- endbuild -->
 </body>
 </html>
