--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ng-table/ng-table.js"></script>
+    <script src="bower_components/lodash/dist/lodash.js"></script>
 
     <!-- endbower -->
     <!-- endbuild -->
