--- a/app/index.html
+++ b/app/index.html
@@ -79,6 +79,7 @@
         <script src="scripts/controllers/register.js"></script>
         <script src="scripts/controllers/projects.js"></script>
         <script src="scripts/controllers/profile.js"></script>
+        <script src="scripts/controllers/login.js"></script>
         <!-- endbuild -->
 </body>
 </html>
