--- a/app/index.html
+++ b/app/index.html
@@ -66,6 +66,7 @@
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/ng-table/ng-table.js"></script>
     <script src="bower_components/lodash/dist/lodash.js"></script>
+    <script src="bower_components/d3/d3.js"></script>
 
     <!-- endbower -->
     <!-- endbuild -->
@@ -80,6 +81,8 @@
         <script src="scripts/controllers/projects.js"></script>
         <script src="scripts/controllers/profile.js"></script>
         <script src="scripts/controllers/login.js"></script>
+        <script src="scripts/directives/teams.js"></script>
+        <script src="scripts/directives/projects.js"></script>
         <!-- endbuild -->
 </body>
 </html>
